<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <ImageView
            android:id="@+id/image1"
          style="@style/imageview"
            android:layout_marginTop="@dimen/dp_150"
            android:background="@drawable/skyobjecy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        </ImageView>
    <ImageView
        android:id="@+id/image2"
        style="@style/imageview"
        android:layout_marginTop="@dimen/dp_0"
        android:background="@drawable/computer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image1"
        app:layout_constraintStart_toStartOf="parent">
    </ImageView>
    <TextView
        android:id="@+id/text3"
        style="@style/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image2"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/taskify">
        ></TextView>
    <Button
        android:id="@+id/btncreate1"
        style="@style/textview"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text3"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/orange"
        android:text="@string/createanaccount"
        android:textAllCaps="false">
        ></Button>

    <TextView
        android:id="@+id/text4"
        style="@style/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btncreate1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/alradyhaveanaccount"
        android:textColor="@color/black">
        ></TextView>
    <TextView
        android:id="@+id/text5"
        style="@style/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btncreate1"
        app:layout_constraintStart_toEndOf="@id/text4"
        android:text="@string/Login"
        android:textColor="@color/black">
        ></TextView>


</androidx.constraintlayout.widget.ConstraintLayout>