<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">
    <View
    style="@style/view"
        android:id="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/blue"
        >
    </View>
    <ImageView
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
      style="@style/imageview"
        android:background="@drawable/ic_vector__3_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>
    <TextView
        style="@style/textview"
        android:layout_marginTop="@dimen/dp_50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        android:text="Create New Account"
        android:layout_marginLeft="@dimen/dp_20"></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:orientation="vertical">
        <TextView
          style="@style/textview2"
            android:text="@string/email"
            android:textColor="@color/black"
            >

        </TextView>
        <EditText
            android:id="@+id/etdemail"
          style="@style/edittext"
            android:background="@drawable/draw"></EditText>
        <TextView
            style="@style/textview2"
            android:text="@string/password"
            android:textColor="@color/black"
            >

        </TextView>
        <EditText
            android:id="@+id/etdpass"
            style="@style/edittext"
            android:background="@drawable/draw"></EditText>
        <TextView
            style="@style/textview2"
            android:text="@string/ReeEntrepassword"
            android:textColor="@color/black"
            >

        </TextView>
        <EditText
            android:id="@+id/etdre"
            style="@style/edittext"
            android:background="@drawable/draw"></EditText>
        <Button
            android:id="@+id/btncreate2"
          style="@style/Button"
            android:background="@color/orange"
            android:text="@string/createanaccount"
            android:textAllCaps="false"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20">


        </Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>