<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">
    <View
        style="@style/view"
        android:id="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/blue"
        >
    </View>
    <ImageView
        android:id="@+id/image3"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        style="@style/imageview"
        android:background="@drawable/ic_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>
    <TextView
        android:id="@+id/text6"
        app:layout_constraintStart_toEndOf="@id/image3"
        app:layout_constraintTop_toTopOf="@id/image3"
        android:text="@string/Heysofia"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_10"
      style="@style/textview2">

    </TextView>
    <TextView

        app:layout_constraintStart_toEndOf="@id/image3"
        app:layout_constraintTop_toBottomOf="@id/text6"
        android:text="@string/Welcomeback"
        android:textColor="@color/white"
        android:layout_margin="@dimen/dp_0"
        android:textStyle="bold"
        style="@style/textview2">

    </TextView>
    <TextView
android:id="@+id/text7"
        app:layout_constraintStart_toStartOf="@id/image3"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:text="@string/Today"
        android:layout_margin="@dimen/dp_0"
        style="@style/textview2">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/text7"

        >
      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="@dimen/dp_70"
          android:layout_margin="@dimen/dp_20">
          <RadioButton
              android:id="@+id/radiometomar"
              android:layout_marginTop="@dimen/dp_30"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/dp_20"

             >
          </RadioButton>
          <TextView
              android:layout_marginLeft="@dimen/dp_50"
             style="@style/textview2"
              android:text="Meeting with omar">

          </TextView>
      </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_70"
            android:layout_margin="@dimen/dp_20">
            <RadioButton
                android:id="@+id/radiowebinar"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"

                >
            </RadioButton>
            <TextView
                android:layout_marginLeft="@dimen/dp_50"
                style="@style/textview2"
                android:text="Webinar with google Api">

            </TextView>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/text8"
            app:layout_constraintStart_toStartOf="@id/image3"
            app:layout_constraintTop_toBottomOf="@id/view"
            android:text="Tommorow"
            android:layout_margin="@dimen/dp_0"
            style="@style/textview2">

        </TextView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="@dimen/dp_20">
            <RadioButton
                android:id="@+id/radiofrontenddev"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"

                >
            </RadioButton>
            <TextView
                android:layout_marginLeft="@dimen/dp_50"
                style="@style/textview2"
                android:text="Frontend devopment">

            </TextView>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/text9"
            app:layout_constraintStart_toStartOf="@id/image3"
            app:layout_constraintTop_toBottomOf="@id/view"
            android:text="14th May 2021"
            android:layout_margin="@dimen/dp_0"
            style="@style/textview2">

        </TextView>
        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="@dimen/dp_20">
            <RadioButton
                android:id="@+id/radiobackenddev"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"

                >
            </RadioButton>
            <TextView
                android:layout_marginLeft="@dimen/dp_50"
                style="@style/textview2"
                android:text="back end devlopment">

            </TextView>

        <View
            android:layout_gravity="end"
            android:id="@+id/viewplusicon"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"

            android:background="@drawable/circle"
            >

        </View>
            <ImageView
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:background="@drawable/ic__color">

            </ImageView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>